
2006-11-17:
	
	* config.sh: Portfreigaben, WLAN oder SIP-Accounts an-/ausschalten:

	    config forward 1 on  # 1. Portforwarding aktivieren
	    config forward 3 off # 3. Portforwarding deaktivieren
	    config wlan off      # WLAN aus
	    config wlan on       # WLAN an
	    config sip 4 on      # 4. SIP-Account aktivieren
	    config sip 2 off     # 2. SIP-Account deaktivieren

2006-11-18:

	callmonitor 1.8 veröffentlicht

2006-12-31:

	* search_ch.sh: Rückwärtssuche bei tel.search.ch (für Nummern aus der
	Schweiz); vielen Dank an niknak.

2006-01-05:

	callmonitor 1.8.1 veröffentlicht

2006-02-24:

	callmonitor 1.8.2 veröffentlicht:

	* config.sh: Rufumleitungen schalten (config diversion 1 on)

	* messages.sh: Aktion Advanced AYAC (ayac) für Gundalfs Client

2006-02-25:

	callmonitor 1.8.3:

	* mail: Quoting von Shell-Metazeichen $ und ` beim Lesen der
	Konfiguration (Danke an bsirius)

2006-04-21:

	callmonitor 1.9:

	* dream2message: Nachricht für Dreamboxen mit Enigma 2; benutzt
	Umgebungsvariablen DREAM_TIMEOUT (10) und DREAM_ICON (1). Danke an
	kolbem.

	* relookmessage: Mit neuer Version des Webinterfaces jetzt mehrzeilige
	Nachrichten möglich. Danke an bolle.

2006-04-28:

	callmonitor 1.9.1:

	* config: Die Konfiguration kann nun abgefragt werden: Einfach den
	Wert weglassen; so gibt z.B. "config forward 1" einen der Werte "on",
	"off" oder "error" (z.B. wenn es die Regel nicht gibt) aus.
	Entsprechend funktionieren "config wlan", "config sip 2", etc. Danke
	an silberwolf für die Anregung.

2006-04-29:

	callmonitor 1.9.2:

	* reverse.sh: Auf Ergebnis der Fallback-Suche warten (Suche mit
	dasoertliche und google hat manchmal kein Ergebnis geliefert, wenn
	dasoertliche schneller als google war). Danke an GBuster und
	silberwolf.

2006-04-30:

	callmonitor 1.9.3:

	* phonebook: Optional auch das eingebaute Telefonbuch der Fritzbox
	durchsuchen (nur Lesen!)

	* webui.sh: Caching des Passworts; Login nur, wenn Passwort nicht-leer