@@ -24,24 +24,8 @@
 ## put default names for each SIP account into the phone book
 ## and print a mapping SIP[0-9] -> SIP address
 sip_info() {
-    allcfgconv -C voip -c -o - |
+    cfg2sh voip |
     sed -ne '
-	## trace nested elements in hold space
-	/^[[:space:]]*[[:alnum:]][[:alnum:]_]* {/ {
-	    s/^[[:space:]]*\([[:alnum:]][[:alnum:]_]*\).*/\1/; H; d
-	}
-	/^ *}/ {
-	    x; s/\(.*\)\n.*$/\1/; h; d
-	}
-	/=/ {
-	    ## append parents, swap, and clean up
-	    G
-	    s/^[[:space:]]*\(.*\)\n\n\(.*\)/\2\n\1/
-	    s/\n/_/g
-	    s/[[:space:]]*=[[:space:]]*/=/
-	    s/\$/\\$/g
-	    s/`/\\`/g
-	}
 	/^voipcfg_ua[[:digit:]]\+_\(username\|registrar\)=/ {
 	    s/^voipcfg_ua\([[:digit:]]\+\)\(.*\)$/\1 \2/
 	    p
